# SoftwareRenderer

./: CMakeLists.txt  README.md  main.cpp  yes  yes.pub
Core/Include/: ARGB.h  Camera.h  Framebuffer.h  HighResolutionClock.h  Math.hpp  Mesh.h  Model.h  RGBAColor.h  Renderer.h  Texture.h  Vertex.h  Window.h
Core/Source/: Camera.cpp  Framebuffer.cpp  HighResolutionClock.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Texture.cpp  Window.cpp
Shaders/: BaseShader.h  BlinPhongShader.h
